--- a/#src/_burger.html
+++ b/#src/_burger.html
@@ -1,18 +1,20 @@
 <!DOCTYPE html>
 <html>
+
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width">
 	<link rel="stylesheet" type="text/css" href="css/burger.css">
-	
-	
+
+
 	<title>Menu</title>
 </head>
+
 <body id="body" class="">
 	<div class="wrapper">
 		<header class="header">
 			<div class="header_container">
-				<a href="" class="header_logo"> <img src="./img/logo.svg" alt="">Головна</a>
+				<a href="index.html" class="header_logo"> <img src="./img/logo.svg" alt="">Головна</a>
 				<div class="header_menu menu">
 					<div class="menu_icon">
 						<span></span>
@@ -63,8 +65,9 @@
 				</div>
 			</div>
 		</header>
-		
+
 	</div>
 	<script src="js/burger.js"></script>
 </body>
+
 </html>
